--- a/templates/index.html
+++ b/templates/index.html
@@ -12,131 +12,22 @@
     <script type="text/javascript" src="../static/script/jquery.cookie.js"></script>
 </head>
 <body>
-<div class="container">
-</div>
 <script type="text/javascript" src="../static/script/senapp.js"></script>
 </body>
 </html>
-<div id="result" class="row">
-    <div class="col-sm-3">
-        <div id="senlist">
-            <ul class="list-group">
-                <li class="list-group-item">
-                    <div>Достоверность: {% for name, answer in all_answer.items %}
-                        <div>Это {{ name }}, его достоверность:{% cycle true_answer_all.0 true_answer_all.1 %}</div><br>
-                    {% endfor %}</div>
-
-                    <br>
-                    <div>Количество угадываний:</div>
-                   {% for name, answer in all_answer.items %}
-                        <div>Это {{ name }}, он угадал: {% cycle right_answer_all.0 right_answer_all.1 %}</div><br>
-                    {% endfor %}
-                    <br>
-                </li>
-            </ul>
-
-        </div>
-    </div>
+<div id="result1" class="row">
     <div class="col-sm-5">
-        <div id="senapp">
-            <div>
-                <div class="alert alert-info">
-                    Загадайте двухзначное число у себя в голове и нажмите кнопку старт.
-                </div>
-                <div class="col-sm-6 center-block">
-                    <button id="target" class="btn btn-success center-block">Старт
-                    </button>
-                </div>
-            </div>
-            <div>
-                <div class="row answer-box">
-                    <div class="col-sm-6">
-                        <div class="answer-item">
-                            {% for name, answer in all_answer.items %}
-                                <div>Это {{ name }}, его ответ: {{ answer }}</div><br>
-                            {% endfor %}
-                        </div>
-                    </div>
-                </div>
-                <div class="alert alert-info">
-                    Введите загаданное число.
-                </div>
-                <div class="col-sm-6 center-block">
-                    <div class="form-group">
-                        <input id="nmb" class="form-control"/>
-                    </div>
-                    <button id="target2" class="btn btn-success center-block">Проверка!</button>
-                </div>
-            </div>
+        <div class="alert alert-info">
+            Введите загаданное число.
         </div>
-    </div>
-    <div class="col-sm-4">
-        <h5>История загаданных чисел:</h5>
-        <div id="answerlist">
-            <ul class="list-group">
-                <li class="list-group-item">
-                    Загаданное число: {{ mstnmb }}<br>
-                    Ранее загаданные числа:
-                    {% for item in history_number %}
-                        <div>Число: {{ item }}</div>
-                    {% endfor %}
-                </li>
-            </ul>
-        </div>
-        <div id="answerlist">
-            <ul class="list-group">
-                <li class="list-group-item">
-                    История ответов экстрасенсов:
-                    {% for name, answer in all_answer.items %}
-                        <div>{{ name }} отвечал: {% cycle history_first history_second %}</div>
-                    {% endfor %}
-                </li>
-            </ul>
+        <div class="col-sm-6 center-block">
+            <form action="../answer/" method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button id="target2" class="btn btn-success center-block">Проверка!</button>
+            </form>
         </div>
     </div>
 </div>
+</div>
 
-{% block javascript %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-    <script>
-        $("#target").on("click", function () {
-            $.ajax({
-                type: 'GET',
-                url: "{% url 'randfunc' %}",
-                success: function (result) {
-                    $('#result').html(result)
-                    //debugger;
-                    //alert("it's working");
-                },
-                error: function (data) {
-                    //debugger;
-                    //alert("Error detected");
-                }
-            });
-            $(this).html('Work')
-        });
-    </script>
-    <script>
-        $("#target2").on("click", function () {
-            var nmb = $("#nmb").val();
-            $.ajax({
-                type: 'GET',
-                url: "{% url 'check' %}",
-                data: {
-                    fnmb: nmb,
-                },
-                success: function (result) {
-                    $('#result').html(result)
-                    //debugger;
-                    //alert("it's working");
-                },
-                error: function (data) {
-                    //debugger;
-                    //alert("Error detected");
-                }
-            });
-            $(this).html('Work')
-        });
-    </script>
-{% endblock javascript %}
