--- a/templates/start.html
+++ b/templates/start.html
@@ -26,7 +26,7 @@
             <div class="col-sm-4 center-block">
             </div>
             <div class="col-sm-4 center-block">
-                <form action="index/" method="post">
+                <form action="answer/" method="post">
                     {% csrf_token %}
                     <button id="target" class="btn btn-success center-block">Старт
                 </button>
